OSSM/1_32/must-gather.local.7013786599205061846/registry-redhat-io-openshift-serverless-1-svls-must-gather-rhel8-sha256-9b7d97cc846f3696675d139e61011364fff4a62e700cb54be77f443b8d49d7cc/namespaces/knative-eventing/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:46:23Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.4.7
      maistra.io/member-of: istio-system
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:maistra-version: {}
            f:maistra.io/member-of: {}
            f:release: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:46:23Z"
    name: istio-expose-route-basic
    namespace: knative-eventing
    resourceVersion: "35769"
    uid: a80a9426-6f8e-42d0-a0af-b226f9328508
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
    podSelector:
      matchLabels:
        maistra.io/expose-route: "true"
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
      maistra.io/mesh-generation: 2.5.1-1-2
    creationTimestamp: "2024-06-05T10:46:23Z"
    generation: 1
    labels:
      app: istio
      app.kubernetes.io/component: mesh-config
      app.kubernetes.io/instance: istio-system
      app.kubernetes.io/managed-by: maistra-istio-operator
      app.kubernetes.io/name: mesh-config
      app.kubernetes.io/part-of: istio
      maistra-version: 2.4.7
      maistra.io/member-of: istio-system
      release: istio
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:maistra.io/mesh-generation: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:maistra-version: {}
            f:maistra.io/member-of: {}
            f:release: {}
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: istio-operator
      operation: Update
      time: "2024-06-05T10:46:23Z"
    name: istio-mesh-basic
    namespace: knative-eventing
    resourceVersion: "35773"
    uid: 5e6a3c80-c5a8-4877-b85e-3f8a4a6c7866
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            maistra.io/member-of: istio-system
    podSelector: {}
    policyTypes:
    - Ingress
kind: NetworkPolicyList
metadata:
  resourceVersion: "53920"
